--- a/views/video.ejs
+++ b/views/video.ejs
@@ -1,28 +1,34 @@
 <%- include layouts/header.ejs %>
     <div class="container">
-    
-        <h1><%= title %></h1>
+      <h1><%= title %></h1>
 
+    
+  
+          
         <div class="row">
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
+         
+        <% for(var video=0;video<Videos.length;video++){ %>   
+           <div class="col-sm-4">
+             <div class="card">
+              <img height="300" src="<%=Videos[video].Imagen%>" class="card-img-top" alt="">
+                 <div class="card-body">
+                   <h5 class="card-title"><%=Videos[video].Titulo %> </h5>
+                   <p class="card-text"><%=Videos[video].comentario %></p>
+                   <a href="<%=Videos[video].referencia%>" class="btn btn-primary">Ver video</a>
+                 </div>
+               </div>
+             </div>
+          
             </div>
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-        </div>
+  
+        <% } %>
+
+
+
+           
+
+      
+       
     </div>
 
 <%- include layouts/footer.ejs %>
