--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -2,8 +2,8 @@
 
 
 
-<footer id="footer">
-    <div class="contenedor footer-content">
+    <footer id="footer">
+        <div class="contenedor footer-content">
             <div class="contact-us">
                 <h2 class="brand">Fernando Quezada Puño &copy; </h2>
                 <p>Si deseas  mayor info sobre mi  solo debes</p>
@@ -32,9 +32,10 @@
         
             </div>
         
-    </div>
-    <div class="line"></div>
+        </div>
+        <div class="line"></div>
     
-  </footer>
+    </footer>
+    <script src="js/index.js"></script>
 </body>
 </html>
